<resources>
    <string name="app_name">20.10.2022</string>
    <string name="pytanko">Jaki szczyt jest widoczny na zdjęciu?</string>
    <string name="giewont">Giewont</string>
    <string name="tarnica">Tarnica</string>
    <string name="wielka_racza">Wielka Racza</string>
    <string name="sprawdz">Sprawdź</string>
    <string name="podpowiedz">Podpowiedź</string>
    <string name="klapki">Szczyt góry, ludzie wchodzą w klapkach</string>
    <string name="pies">
Na mapach: Ziemia49°15′03,5″N 19°56′02,8″E (mapa)
Giewont
Przejdź do nawigacji
Przejdź do wyszukiwania
Giewont
Ilustracja
Widok z Kasprowego Wierchu
Państwo

 Polska
Położenie

powiat tatrzański
Pasmo

Tatry, Karpaty
Wysokość

1894 m n.p.m.
Wybitność

170 m
Położenie na mapie Tatr
(Przełącz na mapę Karpat)
Mapa konturowa Tatr, w centrum znajduje się czarny trójkącik z opisem „Giewont”
Giewont
Giewont
Ziemia49°15′03,5″N 19°56′02,8″E
	Multimedia w Wikimedia Commons
	Zobacz kolekcję cytatów o Giewoncie w Wikicytatach
	Zobacz hasło Giewont w Wikisłowniku

Giewont – masyw górski w Tatrach Zachodnich o wysokości 1894 m n.p.m. i długości 2,7 km. Jego główny wierzchołek, Wielki Giewont, jest zazwyczaj uznawany za najwyższy szczyt Tatr Zachodnich położony w całości na terenie Polski[1]; choć wyższa jest Twarda Kopa w Czerwonych Wierchach[2], pomija się ją ze względu na niewielką wybitność.
Spis treści

    1 Topografia
    2 Geologia
    3 Flora i fauna
    4 Historia i znaczenie
    5 Szlaki turystyczne
    6 Przypisy
    7 Linki zewnętrzne

Topografia

Masyw Giewontu położony jest między Doliną Bystrej, Doliną Kondratową, Doliną Małej Łąki i Doliną Strążyską. Góruje nad Zakopanem i jest z niego znakomicie widoczny. Od strony północnej Giewont jest stromy i trudno dostępny, zbocza południowe są łagodniejsze[1].

Szczyt znajduje się w północnej grani Kopy Kondrackiej. Masyw Giewontu złożony jest z trzech części: Wielkiego Giewontu (1894 m), Małego Giewontu (1739 m) i Długiego Giewontu (1868 m)[1][3]. Pomiędzy Wielkim a Małym Giewontem znajduje się Giewoncka Przełęcz (1709 m), z której opada cieszący się złą sławą (ponieważ zginęło w nim wielu turystów, którzy zboczyli ze szlaku celem skrócenia drogi powrotnej) Żleb Kirkora. Do roku 2003 zginęło w ten sposób ponad 20 turystów[4]. Wielki Giewont ma północną ścianę o wysokości względnej około 600 m. W kierunku południowym zbocza Wielkiego Giewontu opadają do Kondrackiej Przełęczy. Długi Giewont ma ok. 1,3 km długości[1].

Między Wielkim a Długim Giewontem położona jest głęboka przełęcz zwana Szczerbą (1810 m), z której opada Żleb Szczerby. Na Wielkim Giewoncie znajduje się 15-metrowy żelazny krzyż na Giewoncie, obiekt pielgrzymek religijnych, ale również niebezpieczne miejsce w czasie burzy[4].
Geologia

Masyw Giewontu wchodzi w skład tzw. serii wierchowej utworzonej głównie przez skały parautochtoniczne. Sam masyw tworzą dwie płaszczowiny: niższa płaszczowina Czerwonych Wierchów i leżąca na niej płaszczowina Giewontu. Utwory płaszczowiny Czerwonych Wierchów występują tylko w dolnej partii Małego Giewontu, resztę masywu tworzy płaszczowina Giewontu[5].

Masyw Giewontu budują skały osadowe, przede wszystkim wapienie i dolomity triasu oraz wapienie jury i kredy, jedynie na Kondrackiej Przełęczy znajdują się skały metamorficzne – gnejsy i łupki biotytowe, będące zakończeniem dużej wyspy krystalicznej Goryczkowej, ciągnącej się od Kasprowego Wierchu. W kierunku od Kondrackiej Przełęczy odsłaniają się najpierw lądowe piaskowce z przeławiceniami mułowców i zlepieńców dolnego triasu. Odsłaniają się one w rejonie wyniesienia szczytu[5].

Powyżej położone są płytkomorskie dolomity najwyższej części dolnego triasu oraz płytkomorskie dolomity z przeławiceniami wapieni środkowego triasu (wyłącznie anizyk, bez wyższej części tego piętra). W porównaniu do dolomitów dolnotriasowych skały te cechują się grubszymi ławicami. Wierzchołkowe partie południowych stoków Giewontu budują wapienie środkowej jury, a sam wierzchołek i wyższą część północnych zboczy tworzą wapienie jury górnej. Niższe partie zboczy północnych tworzą wapienie kredowe z licznymi amonitami. Podobną budowę ma Mały Giewont. Wszystkie warstwy osadowe zapadają pod kątem 80° na północ[5].
Flora i fauna

Masyw Giewontu położony jest w obrębie Tatrzańskiego Parku Narodowego. Wapienne podłoże sprzyja występowaniu bogatej flory roślin wapieniolubnych. Stwierdzono występowanie rzadkich w Polsce roślin, jak: ostrołódka polna, rogownica szerokolistna, starzec pomarańczowy, szarota Hoppego, wierzba oszczepowata, jastrzębiec śląski, przymiotno węgierskie, podejźrzon rutolistny, potrostek alpejski (wszystkie z wyjątkiem starca i podejźrzona występują w Polsce tylko w Tatrach i to na nielicznych stanowiskach)[6]. W ścianach Giewontu przebywają w zimie kozice i jest to jedno z niewielu w polskich Tatrach miejsc, w których mogą przetrwać zimę[7].
Wielki i Długi Giewont z Przełęczy pod Kopą Kondracką

Masyw Giewontu z Polany Strążyskiej

Giewont od południa

Giewont od zachodu

Giewont z okolic Przełęczy między Kopami

Zdjęcie masywu Giewontu z początku XX wieku

Szczyt Giewontu
Historia i znaczenie
Giewont w 1938

Najstarsze dokumenty wspominają o istnieniu w XVI wieku kopalni miedzi Gyewant w Giewoncie. Nie zostało jednak wyjaśnione ostatecznie pochodzenie nazwy góry. Nazwa góry wywodzi się prawdopodobnie z języka niemieckiego, od słowa Wand (‘ściana, skała’). Pierwotna forma brzmiała zapewne Gewand (grupa skał) bądź Gähwand (‘stroma skała’)[8]. Jednak według Mariusza Zaruskiego podobnie jak wiele innych nazw tatrzańskich, nazwa góry pochodzi od nazwiska góralskiego – żyje do tej pory ród Giewontów[9].

Giewont to góra-symbol, której zarys kojarzony jest z sylwetką śpiącego rycerza. Jedna z wersji legendy o rycerzach śpiących pod Tatrami, którzy obudzą się, gdy Polska znajdzie się w wielkim zagrożeniu, umiejscawia ich właśnie pod Giewontem. Związane jest to z licznymi w ścianach Giewontu jaskiniami, m.in. Jaskinia Zawaliskowa w Długim Giewoncie, Studnia w Giewoncie, Jaskinia Juhaska, Jaskinia Śpiących Rycerzy, Jaskinia Śpiących Rycerzy Wyżnia, Kozia Grota, Dziura w Szczerbie, Ruda Nyża, Dziura nad Doliną Strążyską[9][10].

Północne ściany Giewontu są atrakcyjnym celem wspinaczkowym dla taterników. Wytyczono w nich wiele dróg wspinaczkowych. Jednakże znajdują się na obszarze ochrony ścisłej Regle Zakopiańskie i TPN nie zezwala na wspinaczkę[7].

Walery Eljasz-Radzikowski w 1880 r. pisał o Giewoncie: „Z każdej prawie chaty Giewonta widać, toteż słusznie mu się należy tytuł króla zakopiańskiego”[9].

Giewont jest bardzo niebezpieczny podczas burzy. Było wiele wypadków porażenia piorunem, w tym śmiertelnych. W dniu 22 sierpnia 2019 podczas burzy pioruny uderzyły w kopułę szczytową Giewontu, śmiertelnie rażąc 4 osoby (w tym dwoje dzieci) i raniąc ponad 100 (w tym kilkadziesiąt ciężko, 157 osób zostało hospitalizowanych)[11]. Był to najtragiczniejszy wypadek w historii zdobywania tej góry od 1937 roku, kiedy również zginęły 4 osoby[4].
Szlaki turystyczne

Na szczyt Wielkiego Giewontu dojść można trzema popularnymi szlakami turystycznymi (czasy przejścia podane na podstawie mapy[12]):

    szlak turystyczny niebieski – niebieski z Kuźnic przez Kalatówki, Dolinę Kondratową, obok schroniska PTTK na Hali Kondratowej i przez Kondracką Przełęcz. Czas przejścia: 2:55 h, ↓ 2:15 h
    szlak turystyczny czerwony szlak turystyczny niebieski – czerwony z Doliny Strążyskiej przez Polanę Strążyską i Przełęcz w Grzybowcu na Wyżnią Kondracką Przełęcz, stamtąd dalej szlakiem niebieskim.

        Czas przejścia od wylotu Doliny Strążyskiej na przełęcz: 3 h, ↓ 2:20 h
        Czas przejścia z przełęczy na szczyt Giewontu: 15 min, ↓ 10 min

    szlak turystyczny żółty szlak turystyczny niebieski – żółty z Gronika przez Dolinę Małej Łąki na Kondracką Przełęcz, dalej szlakiem niebieskim.

        Czas przejścia z Gronika na przełęcz: 2:45 h, ↓ 2:05 h
        Czas przejścia z przełęczy na szczyt Giewontu: 30 min, ↓ 20 min.

Do Wyżniej Kondrackiej Przełęczy trasa jest bez większych trudności technicznych. Ostatni podwierzchołkowy odcinek (szlak niebieski) jest trudniejszy i ubezpieczony łańcuchami. Obowiązuje na nim ruch jednostronny – na szczyt prowadzi (patrząc z dołu) trasa z prawej strony. W sezonie przy dobrej pogodzie na odcinku tym tworzą się kolejki, czasami bardzo długie – Giewont należy do najbardziej popularnych szczytów[4].
Przypisy

Tatry Polskie. Mapa turystyczna 1:20 000, Piwniczna: Agencja Wydawnictwo „WiT” S.c., 2009, ISBN 83-89580-00-4.
Geoportal. Mapa topograficzna i lotnicza [dostęp 2019-05-15].
Główny Urząd Geodezji i Kartografii, Dane pomiarowe z lotniczego skaningu laserowego.
Józef Nyka, Tatry Polskie. Przewodnik, wyd. 13, Latchorzew: Wydawnictwo Trawers, 2003, ISBN 83-915859-1-3.
M. Bac-Moszaszwilli, M. Gąsienica Szostak, Tatry Polskie. Przewodnik geologiczny dla turystów, Warszawa: Wyd. Geologiczne, 1990.
Zbigniew Mirek, Halina Piękoś-Mirek, Czerwona księga Karpat Polskich, Warszawa: Instytut Botaniki PAN, 2008, ISBN 978-83-89648-71-6.
Przyrodnicy kontra taternicy. „Nie będziemy w jednym gnieździe spać” [dostęp 2010-01-27] [zarchiwizowane z adresu 2013-09-25].
Maria Malec, Słownik etymologiczny nazw geograficznych Polski, Warszawa: PWN, 2003.
Mariusz Zaruski, Na bezdrożach tatrzańskich [dostęp 2008-05-10] [zarchiwizowane z adresu 2016-12-23].
Jaskinie Polski, Jaskinie Polski. Państwowy Instytut Geologiczny – Państwowy Instytut Badawczy [dostęp 2020-02-28].
Tragiczna burza w Tatrach: śledztwo trwa już pół roku [dostęp 2020-02-28].

    Tatry. Zakopane i okolice. Mapa w skali 1:27 000, Warszawa: ExpressMap Polska, 2005, ISBN 83-88112-35-X.

Linki zewnętrzne

    Giewont, [w:] Słownik geograficzny Królestwa Polskiego, t. II: Derenek – Gżack, Warszawa 1881, s. 567.
    Archiwalne widoki góry w bibliotece Polona

    pde

Wschodnia grań Giewontu
Kontrola autorytatywna (góra):

    VIAF: 82156130977958311443NKC: ge161590PLWABN: 9810604580905606

Encyklopedia internetowa:

    PWN: 3905416

Kategorie:

    Granie i grzbiety Tatr ZachodnichGranie i grzbiety polskich Tatr

Menu nawigacyjne

    Nie jesteś zalogowany
    Dyskusja
    Edycje
    Utwórz konto
    Zaloguj się

    Artykuł
    Dyskusja

    Czytaj
    Edytuj
    Edytuj kod źródłowy
    Historia i autorzy

Szukaj

    Strona główna
    Losuj artykuł
    Kategorie artykułów
    Najlepsze artykuły
    Częste pytania (FAQ)

Dla czytelników

    O Wikipedii
    Zgłoś błąd
    Kontakt
    Wspomóż Wikipedię

Dla wikipedystów

    Pierwsze kroki
    Portal wikipedystów
    Ogłoszenia
    Zasady
    Pomoc
    Ostatnie zmiany

Narzędzia

    Linkujące
    Zmiany w linkowanych
    Prześlij plik
    Strony specjalne
    Link do tej wersji
    Informacje o tej stronie
    Cytowanie tego artykułu
    Element Wikidanych
    Zaproponuj do mediów społecznościowych

Drukuj lub eksportuj

    Utwórz książkę
    Pobierz jako PDF
    Wersja do druku

W innych projektach

    Wikimedia Commons
    Wikicytaty

W innych językach

    Cebuano
    Čeština
    Deutsch
    English
    فارسی
    Français
    Magyar
    مصرى
    Nederlands
    Norsk nynorsk
    پنجابی
    Русский
    Slovenčina
    Українська
    Tiếng Việt

Edytuj linki

    Tę stronę ostatnio edytowano 29 paź 2021, 11:54.
    Tekst udostępniany na licencji Creative Commons: uznanie autorstwa, na tych samych warunkach, z możliwością obowiązywania dodatkowych ograniczeń. Zobacz szczegółowe informacje o warunkach korzystania.

    Polityka prywatności
    O Wikipedii
    Korzystasz z Wikipedii tylko na własną odpowiedzialność
    Wersja mobilna
    Dla deweloperów
    Statystyki
    Komunikat na temat ciasteczek

    Wikimedia Foundation
    Powered by MediaWiki

</string>
    <string name="good">good answer!</string>
    <string name="wrong">wrong answer!</string>
    <string name="goback">Go back to test</string>
</resources>